{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 68,
  "lineage": "9f68cfda-b8f1-140c-9967-303d1d8dca04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:security-group/sg-009c368b23de5c772",
            "description": "Allow inbound HTTP to app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009c368b23de5c772",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chat-app-app-sg",
            "name_prefix": "",
            "owner_id": "888245941943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Project": "chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:security-group/sg-0b19bc1fa1b7ecdf2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b19bc1fa1b7ecdf2",
            "ingress": [],
            "name": "chat-app-eks-cluster-2025120804170219640000000f",
            "name_prefix": "chat-app-eks-cluster-",
            "owner_id": "888245941943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "chat-app-eks-cluster",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-eks-cluster",
              "Project": "chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:security-group/sg-06e10e078d14e4032",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-06e10e078d14e4032",
            "ingress": [],
            "name": "chat-app-eks-node-20251208041702512900000010",
            "name_prefix": "chat-app-eks-node-",
            "owner_id": "888245941943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "chat-app-eks-node",
              "Project": "chat-app",
              "kubernetes.io/cluster/chat-app-eks": "owned"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-eks-node",
              "Project": "chat-app",
              "kubernetes.io/cluster/chat-app-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3306630436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b19bc1fa1b7ecdf2",
            "security_group_rule_id": "sgr-0bce9509b64b5f583",
            "self": false,
            "source_security_group_id": "sg-06e10e078d14e4032",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1518023004",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-0d0e14728d1df5d00",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-519751935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-0f88f94106ed49dca",
            "self": false,
            "source_security_group_id": "sg-0b19bc1fa1b7ecdf2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-537314318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-0961bb4f0e87dbc84",
            "self": false,
            "source_security_group_id": "sg-0b19bc1fa1b7ecdf2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3913589656",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-03ef3032958a3caf5",
            "self": false,
            "source_security_group_id": "sg-0b19bc1fa1b7ecdf2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4195917753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-00c0c1cf9bb405e41",
            "self": false,
            "source_security_group_id": "sg-0b19bc1fa1b7ecdf2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2662968434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-04b55ddfbbf6742ac",
            "self": false,
            "source_security_group_id": "sg-0b19bc1fa1b7ecdf2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2675028395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-0fb0f7a5329f79e20",
            "self": false,
            "source_security_group_id": "sg-0b19bc1fa1b7ecdf2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1140104119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-0aa913eb2501741a2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3863690837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-05e64df1d8c19bd02",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1108647354",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06e10e078d14e4032",
            "security_group_rule_id": "sgr-0cd31c33c300efef7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:network-acl/acl-05f6f810e334b1231",
            "default_network_acl_id": "acl-05f6f810e334b1231",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05f6f810e334b1231",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "888245941943",
            "subnet_ids": [
              "subnet-01b73ffcad54f263a",
              "subnet-037fa18d2a6452ca4",
              "subnet-05058a969a36a05e9",
              "subnet-066f5d9c32fad92bf",
              "subnet-06bbe91c164b4fd12",
              "subnet-09ce9fe1bbc9f8eb0"
            ],
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-default",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-default",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:route-table/rtb-01f40ebfe999697cb",
            "default_route_table_id": "rtb-01f40ebfe999697cb",
            "id": "rtb-01f40ebfe999697cb",
            "owner_id": "888245941943",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-default",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-default",
              "Project": "chat-app"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:security-group/sg-094ae88f578e2c71b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-094ae88f578e2c71b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "888245941943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-default",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-default",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a21399d353d2a5eb",
            "arn": "arn:aws:ec2:eu-west-1:888245941943:elastic-ip/eipalloc-0a21399d353d2a5eb",
            "domain": "vpc",
            "id": "eipalloc-0a21399d353d2a5eb",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-220-140-11.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.140.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-eu-west-1a",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-eu-west-1a",
              "Project": "chat-app"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:internet-gateway/igw-0f2b3f67368e8d507",
            "id": "igw-0f2b3f67368e8d507",
            "owner_id": "888245941943",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a21399d353d2a5eb",
            "association_id": "eipassoc-0a54b32d86e111624",
            "connectivity_type": "public",
            "id": "nat-044c4521b4f03b79a",
            "network_interface_id": "eni-072bf31ee4b4ea031",
            "private_ip": "10.0.101.38",
            "public_ip": "54.220.140.11",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066f5d9c32fad92bf",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-eu-west-1a",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-eu-west-1a",
              "Project": "chat-app"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bdc27d7c498834fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-044c4521b4f03b79a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bdc27d7c498834fb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f2b3f67368e8d507",
            "id": "r-rtb-0db57a41bade844e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db57a41bade844e8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:route-table/rtb-0bdc27d7c498834fb",
            "id": "rtb-0bdc27d7c498834fb",
            "owner_id": "888245941943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-private",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-private",
              "Project": "chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:route-table/rtb-0db57a41bade844e8",
            "id": "rtb-0db57a41bade844e8",
            "owner_id": "888245941943",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-public",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-public",
              "Project": "chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a282eac098743bad",
            "route_table_id": "rtb-0bdc27d7c498834fb",
            "subnet_id": "subnet-037fa18d2a6452ca4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fce552d73374ba9f",
            "route_table_id": "rtb-0bdc27d7c498834fb",
            "subnet_id": "subnet-06bbe91c164b4fd12"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07aa78b2fb1e03ece",
            "route_table_id": "rtb-0bdc27d7c498834fb",
            "subnet_id": "subnet-01b73ffcad54f263a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ac408aa7072f9ce",
            "route_table_id": "rtb-0db57a41bade844e8",
            "subnet_id": "subnet-066f5d9c32fad92bf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da47c764f6bd4494",
            "route_table_id": "rtb-0db57a41bade844e8",
            "subnet_id": "subnet-05058a969a36a05e9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064c1770740379c28",
            "route_table_id": "rtb-0db57a41bade844e8",
            "subnet_id": "subnet-09ce9fe1bbc9f8eb0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:subnet/subnet-037fa18d2a6452ca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037fa18d2a6452ca4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888245941943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-private-eu-west-1a",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-private-eu-west-1a",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:subnet/subnet-06bbe91c164b4fd12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bbe91c164b4fd12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888245941943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-private-eu-west-1b",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-private-eu-west-1b",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:subnet/subnet-01b73ffcad54f263a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b73ffcad54f263a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888245941943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-private-eu-west-1c",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-private-eu-west-1c",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:subnet/subnet-066f5d9c32fad92bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066f5d9c32fad92bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888245941943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-public-eu-west-1a",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-public-eu-west-1a",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:subnet/subnet-05058a969a36a05e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05058a969a36a05e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888245941943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-public-eu-west-1b",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-public-eu-west-1b",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:subnet/subnet-09ce9fe1bbc9f8eb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ce9fe1bbc9f8eb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888245941943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc-public-eu-west-1c",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc-public-eu-west-1c",
              "Project": "chat-app"
            },
            "vpc_id": "vpc-06c4c473c80b7ab5a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:888245941943:vpc/vpc-06c4c473c80b7ab5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f6f810e334b1231",
            "default_route_table_id": "rtb-01f40ebfe999697cb",
            "default_security_group_id": "sg-094ae88f578e2c71b",
            "dhcp_options_id": "dopt-017446aa057b78412",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c4c473c80b7ab5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f40ebfe999697cb",
            "owner_id": "888245941943",
            "tags": {
              "Env": "prod",
              "Name": "chat-app-vpc",
              "Project": "chat-app"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "chat-app-vpc",
              "Project": "chat-app"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}